<resources>
    <string name="app_name">HeySafe</string>
    <string name="login">LOGIN</string>
    <string name="signup">Sign up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>


    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="signup_text">New here?</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_vitals">Vitals</string>
    <string name="title_sos">SOS</string>
    <string name="title_help">Help</string>
    <string name="title_learn">Learn</string>
    <string name="heart_rate_text">Heart Rate: %1$.1f</string>



</resources>