<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_vitals"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_vitals" />

    <item
        android:id="@+id/navigation_sos"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_sos" />
    <item
        android:id="@+id/navigation_help"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_help" />
    <item
        android:id="@+id/navigation_learn"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_learn" />

</menu>